methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:10: error: not found: value color
  makeV(color.YELLOW)
        ^MethodsPicture:11: error: not found: value color
  makeV(color.RED)
        ^MethodsPicture:12: error: not found: value color
  makeV(color.BLUE)
        ^MethodsPicture:13: error: not found: value color
  makeV(color.GREEN)
        ^MethodsPicture:41: error: not enough arguments for method fourV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
     fourV();
          ^